# indiwebmanager

./: .dockerignore  .gitignore  .jshintignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  indiweb.conf  indiweb.wsgi  indiwebmanager-pi.service  indiwebmanager.service  profiles.db  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  publish.yml
indiweb/: AsyncSystemCommand.py  async_system_command.py  database.py  device.py  driver.py  evt_indi_client.py  indi_client.py  indi_server.py  indihub_agent.py  main.py  paa_monitor.py  routes.py  state.py
indiweb/views/: device_control.tpl  form.tpl  paa.tpl
indiweb/views/css/: bootstrap-select.min.css  device_control.css  jquery-ui.min.css  schoolhouse.css
indiweb/views/js/: bootstrap-select.min.js  indi.js  jquery-ui.min.js
scripts/: docker-test.sh
servermanager/: autostart.py  db.py  drivermanager.py  indiserver.py  parsedrivers.py  profiles.db  servermanager.py
servermanager/views/: bootstrap.tpl  form.tpl  index.tpl
servermanager/views/css/: jquery-ui.min.css  schoolhouse.css
servermanager/views/js/: indi.js
tests/: __init__.py  conftest.py  test_api.py  test_database.py  test_device.py  test_driver.py  test_indi_server.py  test_integration.py  test_paa_monitor.py
tests/fixtures/xml/: drivers.xml
