[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["indiweb"]

[tool.hatch.build.targets.sdist]
include = [
  "indiweb/**",
  "README.md",
  "LICENSE",
  "AUTHORS",
  "*.service",
]

[project]
name = "indiweb"
version = "1.1.0"
authors = [
  { name="Jasem Mutlaq", email="mutlaqja@ikarustech.com" },
  { name="Juan Menendez", email="juanmb@gmail.com" }
]
description = "A simple web application to manage INDI server"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "LGPL"}
classifiers = [
    'License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)',
    'Natural Language :: English',
    'Programming Language :: Python',
    'Operating System :: OS Independent',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Astronomy',
]
dependencies = [
    "requests>=2.32.4",
    "psutil>=6.0.0",
    "importlib_metadata>=8.5.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "asgiref>=3.8.0",
    "a2wsgi>=1.10.0"
]

[project.scripts]
indi-web = "indiweb.main:main"

[project.urls]
"Homepage" = "http://www.indilib.org/"

[project.optional-dependencies]
dev = [
  "ruff>=0.4.0",
  "mypy>=1.8.0",
  "pre-commit>=3.6.0",
]

[tool.ruff]
target-version = "py39"
line-length = 140
exclude = ["indiweb.wsgi"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
